[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "linux-native", "linux-native-sync-persistent"] }
reqwest = { version = "0.12.22", features = ["json"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
